tests/cases/match/errors/match-struct-pattern-duplicate-field.ari
struct Point {
  x: i64,
  y: i64,
}

fn main() -> i64 {
  let point = Point { x: 1, y: 2 };
  return match point {
    Point { x: first, x: second, y } => first + second + y,
  };
}
